Fix tags annotations issues, attempt to emulate screen.